--- a/_posts/2016-05-05-gdb.markdown
+++ b/_posts/2016-05-05-gdb.markdown
@@ -117,6 +117,8 @@ Frequently used commands,
 
 # gdbserver
 
+[power.c](/code_for_post/gdb/power.c)   
+
 # gdb -tui 
 
 # ddd
@@ -144,5 +146,5 @@ https://sourceware.org/gdb/current/onlinedocs/gdb/
 
 https://www.cs.cmu.edu/~gilpin/tutorial/
 
-
+[How to Debug Programs on Remote Server using GDBServer Example](http://www.thegeekstuff.com/2014/04/gdbserver-example/)
 
