--- a/_posts/2016-05-05-gdb.markdown
+++ b/_posts/2016-05-05-gdb.markdown
@@ -14,6 +14,9 @@ Stallman launched the GNU Project, founded the Free Software Foundation, develop
 
 The GNU Debugger, usually called just GDB and named gdb as an executable file, is the standard debugger for the GNU operating system. However, its use is not strictly limited to the GNU operating system; it is a portable debugger that runs on many Unix-like systems and works for many programming languages, including Ada, C, C++, Objective-C, Free Pascal, Fortran, Java and partially others.
 
+	gdb
+	pdb
+
 # Help
 	(gdb) h
 	List of classes of commands:
@@ -42,6 +45,7 @@ Frequently used commands,
 	b
 	p
 	bt 
+        l
 	r
 	c
 	n
@@ -87,12 +91,86 @@ enable breakpoints -- Enable some breakpoints
 		breakpoint already hit 9 times
 	3       breakpoint     keep y   0x0000000000400585 in main at power.c:7
 
+Delete breakpoints,
+
+	(gdb) info b
+	Num     Type           Disp Enb Address            What
+	1       breakpoint     keep y   0x0000000000400585 in main at power.c:8
+		breakpoint already hit 1 time
+	2       breakpoint     keep y   0x000000000040058f in main at power.c:9
+	(gdb) d
+	Delete all breakpoints? (y or n) n
+	(gdb) info b
+	Num     Type           Disp Enb Address            What
+	1       breakpoint     keep y   0x0000000000400585 in main at power.c:8
+		breakpoint already hit 1 time
+	2       breakpoint     keep y   0x000000000040058f in main at power.c:9
+	(gdb) d 1
+	(gdb) info b
+	Num     Type           Disp Enb Address            What
+	2       breakpoint     keep y   0x000000000040058f in main at power.c:9
+
+
+# list 
+
+	(gdb) bt
+	#0  main () at power.c:9
+	(gdb) l 9
+	4	
+	5	int main() {
+	6	
+	7		int i;
+	8		printf("Program to calculate power\n");
+	9		for (i=0;i<10;i++)
+	10			printf("%d %d\n",i, power(2,i));
+	11		return 0;
+	12	}
+	13	
+
+# print
+
+
 # backtrace
 
 	(gdb) h bt
 	Print backtrace of all stack frames, or innermost COUNT frames.
 	With a negative argument, print outermost -COUNT frames.
 	Use of the 'full' qualifier also prints the values of the local variables.
+
+# watch
+
+# info
+
+	info b
+
+	(gdb) info threads
+	  Id   Target Id         Frame 
+	* 1    process 9821 "power" main () at power.c:9
+
+# info vtble EXP ???
+
+	(gdb) h info vtbl
+	Show the virtual function table for a C++ object.
+	Usage: info vtbl EXPRESSION
+	Evaluate EXPRESSION and display the virtual function table for the
+	resulting object.
+
+# file 
+
+	(gdb) h file
+	Use FILE as program to be debugged.
+	It is read for its symbols, for getting the contents of pure memory,
+	and it is the program executed when you use the `run' command.
+	If FILE cannot be found as specified, your execution directory path
+	($PATH) is searched for a command of that name.
+	No arg means to have no executable file and no symbols.
+
+# inferiors
+
+# pwd
+
+	(gdb) h pwd
+	Print working directory.  This is used for your program as well.
 
 # An Example Debugging Session 
 
