--- a/_posts/2016-12-27-i2c-driver.markdown
+++ b/_posts/2016-12-27-i2c-driver.markdown
@@ -164,11 +164,15 @@ drivers/i2c/busses/i2c-s3c2410.c
 	i2c probe [address] - test for and show device(s) on the I2C bus
 
 
+# 14.1 I2C时序初步认识
 
 
 ![I2C通信流程解析](http://c.51hei.com/d/forum/201309/28/151347ngefv59bv5me0bpk.jpg)
 
 
+起始信号：UART通信是从一直持续的高电平出现一个低电平标志起始位；而I2C通信的起始信号的定义是SCL为高电平期间，SDA由高电平向低电平变化产生一个下降沿，表示起始信号，如图中的start部分所示。
+数据传输：首先，UART是低位在前，高位在后；而I2C通信是高位在前，低位在后。第二，UART通信数据位是固定长度，波特率分之一，一位一位固定时间发送完毕就可以了。而I2C没有固定波特率，但是有时序的要求，要求当SCL在低电平的时候，SDA允许变化，也就是说，发送方必须先保持SCL是低电平，才可以改变数据线SDA，输出要发送的当前数据的一位；而当SCL在高电平的时候，SDA绝对不可以变化，因为这个时候，接收方要来读取当前SDA的电平信号是0还是1，因此要保证SDA的稳定不变化，如图中的每一位数据的变化，都是在SCL的低电平位置。8为数据位后边跟着的是一位响应位，响应位我们后边还要具体介绍。
+停止信号：UART通信的停止位是一位固定的高电平信号；而I2C通信停止信号的定义是SCL为高电平期间，SDA由低电平向高电平变化产生一个上升沿，表示结束信号，如图中的stop部分所示。
 
 
 # Reference
