--- a/_posts/2016-02-12-rootfs.markdown
+++ b/_posts/2016-02-12-rootfs.markdown
@@ -13,9 +13,25 @@ categories: jekyll update
 
 
 
+# LILO (boot loader) vs GRUB
+
+`LILO` (LInux LOader) is a boot loader for Linux and was the default boot loader for most Linux distributions in the years after the popularity of loadlin. Today, many distributions use `GRUB` as the default boot loader, but LILO and its variant ELILO are still in wide use. Further development of LILO was discontinued in December 2015 along with a request by Joachim Weidorn for potential developers.
+
+GNU `GRUB` (short for GNU GRand Unified Bootloader) is a boot loader package from the GNU Project. GRUB is the reference implementation of the Free Software Foundation's Multiboot Specification, which provides a user the choice to boot one of multiple operating systems installed on a computer or select a specific kernel configuration available on a particular operating system's partitions.
+
+
+
 
 # Reference
-- [rootfs](http://blog.csdn.net/kevin_hcy/article/details/17663341)
 
-- [ramfs, rootfs and initramfs - The Linux Kernel Archives](https://www.kernel.org/doc/Documentation/filesystems/ramfs-rootfs-initramfs.txt)
+
+[RootFileSystem](https://kernelnewbies.org/RootFileSystem)
+
+[rootfs](http://blog.csdn.net/kevin_hcy/article/details/17663341)
+
+[ramfs, rootfs and initramfs - The Linux Kernel Archives](https://www.kernel.org/doc/Documentation/filesystems/ramfs-rootfs-initramfs.txt)
+
+  as same as `Documentation/filesystems/ramfs-rootfs-initramfs.txt`
+
+[From-PowerUp-To-Bash-Prompt-HOWTO-1](http://www.tldp.org/HOWTO/From-PowerUp-To-Bash-Prompt-HOWTO-1.html)
 
